updated paper, the submitted version

--- a/docs/ipmi2017/fmri_bib.bib
+++ b/docs/ipmi2017/fmri_bib.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 
 @Article{bhushan2016temporal,
-  author    = {Bhushan, Chitresh and Chong, Minqi and Choi, Soyoung and Joshi, Anand A and Haldar, Justin P and Damasio, Hanna and Leahy, Richard M},
+  author    = {Bhushan, C. and Chong, M. and Choi, S. and Joshi, A. A. and Haldar, J. P. and Damasio, H. and Leahy, R. M.},
   title     = {Temporal Non-Local Means Filtering Reveals Real-Time Whole-Brain Cortical Interactions in Resting fMRI},
   journal   = {PloS one},
   year      = {2016},
@@ -12,7 +12,7 @@
 }
 @article{kabsch1976solution,
   title={A solution for the best rotation to relate two sets of vectors},
-  author={Kabsch, Wolfgang},
+  author={Kabsch, W.},
   journal={Acta Crystallographica Section A: Crystal Physics, Diffraction, Theoretical and General Crystallography},
   volume={32},
   number={5},
@@ -22,7 +22,7 @@
 }
 @article{boutin2004reconstructing,
   title={On reconstructing n-point configurations from the distribution of distances or areas},
-  author={Boutin, Mireille and Kemper, Gregor},
+  author={Boutin, M. and Kemper, G.},
   journal={Advances in Applied Mathematics},
   volume={32},
   number={4},
@@ -32,7 +32,7 @@
 }
 @article{iraji2016connectivity,
   title={The connectivity domain: Analyzing resting state fMRI data using feature-based data-driven and model-based methods},
-  author={Iraji, Armin and Calhoun, Vince D and Wiseman, Natalie M and Davoodi-Bojd, Esmaeil and Avanaki, Mohammad RN and Haacke, E Mark and Kou, Zhifeng},
+  author={Iraji, A. and Calhoun, V. D. and Wiseman, N. M. and Davoodi-Bojd, E. and Avanaki, M. R.N. and Haacke, E. M. and Kou, Z.},
   journal={NeuroImage},
   volume={134},
   pages={494--507},
@@ -41,7 +41,7 @@
 }
 @article{kuhn1955hungarian,
   title={The Hungarian method for the assignment problem},
-  author={Kuhn, Harold W},
+  author={Kuhn, H. W.},
   journal={Naval research logistics quarterly},
   volume={2},
   number={1-2},
@@ -51,7 +51,7 @@
 }
 @article{amunts2007cytoarchitecture,
   title={Cytoarchitecture of the cerebral cortex-more than localization},
-  author={Amunts, K and Schleicher, A and Zilles, K},
+  author={Amunts, K. and Schleicher, A. and Zilles, K.},
   journal={Neuroimage},
   volume={37},
   number={4},
@@ -61,13 +61,13 @@
 }
 @article{von1925cytoarchitectonics,
   title={The cytoarchitectonics of the adult human cortex},
-  author={Von Economo, CB and Koskinas, GN},
+  author={Von Economo, C.B. and Koskinas, G.N.},
   journal={Vienna and Berlin: Julius Springer Verlag},
   year={1925}
 }
 @article{sorkine2009least,
   title={Least-squares rigid motion using svd},
-  author={Sorkine, Olga},
+  author={Sorkine, O.},
   journal={Technical notes},
   volume={120},
   number={3},
@@ -75,7 +75,7 @@
 }
 @article{calhoun2009review,
   title={A review of group ICA for fMRI data and ICA for joint inference of imaging, genetic, and ERP data},
-  author={Calhoun, Vince D and Liu, Jingyu and Adal{\i}, T{\"u}lay},
+  author={Calhoun, V. D and Liu, J. and Adal{\i}, T.},
   journal={Neuroimage},
   volume={45},
   number={1},
@@ -85,7 +85,7 @@
 }
 @article{posner2014connecting,
   title={Connecting the dots: a review of resting connectivity MRI studies in attention-deficit/hyperactivity disorder},
-  author={Posner, Jonathan and Park, Christine and Wang, Zhishun},
+  author={Posner, J. and Park, C. and Wang, Z.},
   journal={Neuropsychology review},
   volume={24},
   number={1},
@@ -95,7 +95,7 @@
 }
 @article{redcay2013intrinsic,
   title={Intrinsic functional network organization in high-functioning adolescents with autism spectrum disorder},
-  author={Redcay, Elizabeth and Moran, Joseph M and Mavros, Penelope Lee and Tager-Flusberg, Helen and Gabrieli, John DE and Whitfield-Gabrieli, Susan},
+  author={Redcay, E. and Moran, J. M. and Mavros, P. L. and Tager-Flusberg, H. and Gabrieli, J. D.E. and Whitfield-Gabrieli, S.},
   journal={Frontiers in human neuroscience},
   volume={7},
   pages={573},
@@ -104,7 +104,7 @@
 }
 @inproceedings{smyser2015use,
   title={Use of resting-state functional MRI to study brain development and injury in neonates},
-  author={Smyser, Christopher D and Neil, Jeffrey J},
+  author={Smyser, C. D. and Neil, J. J.},
   booktitle={Seminars in perinatology},
   volume={39},
   number={2},
@@ -113,7 +113,7 @@
   organization={Elsevier}
 }
 @Article{rousseeuw1987silhouettes,
-  author    = {Rousseeuw, Peter J},
+  author    = {Rousseeuw, P. J.},
   title     = {Silhouettes: a graphical aid to the interpretation and validation of cluster analysis},
   journal   = {Journal of computational and applied mathematics},
   year      = {1987},
@@ -123,7 +123,7 @@
 }
 
 @Article{biswal1995functional,
-  author    = {Biswal, Bharat and Zerrin Yetkin, F and Haughton, Victor M and Hyde, James S},
+  author    = {Biswal, B. and Zerrin Y. F. and Haughton, V. M. and Hyde, J. S.},
   title     = {Functional connectivity in the motor cortex of resting human brain using echo-planar mri},
   journal   = {Magnetic resonance in medicine},
   year      = {1995},
@@ -134,7 +134,7 @@
 }
 
 @Article{raichle2001default,
-  author    = {Raichle, Marcus E and MacLeod, Ann Mary and Snyder, Abraham Z and Powers, William J and Gusnard, Debra A and Shulman, Gordon L},
+  author    = {Raichle, M. E. and MacLeod, A. M. and Snyder, A. Z. and Powers, W. J. and Gusnard, D. A. and Shulman, G. L.},
   title     = {A default mode of brain function},
   journal   = {Proceedings of the National Academy of Sciences},
   year      = {2001},
@@ -145,7 +145,7 @@
 }
 
 @Article{sporns2005human,
-  author    = {Sporns, Olaf and Tononi, Giulio and K{\"o}tter, Rolf},
+  author    = {Sporns, O. and Tononi, G. and K{\"o}tter, R.},
   title     = {The human connectome: a structural description of the human brain},
   journal   = {PLoS Comput Biol},
   year      = {2005},
@@ -156,7 +156,7 @@
 }
 
 @Article{smith2013functional,
-  author    = {Smith, Stephen M and Vidaurre, Diego and Beckmann, Christian F and Glasser, Matthew F and Jenkinson, Mark and Miller, Karla L and Nichols, Thomas E and Robinson, Emma C and Salimi-Khorshidi, Gholamreza and Woolrich, Mark W and others},
+  author    = {Smith, S. M. and Vidaurre, D. and Beckmann, C. F. and Glasser, M. F. and Jenkinson, M. and Miller, K. L. and Nichols, T. E. and Robinson, E. C. and Salimi-Khorshidi, G. and Woolrich, M. W. and Barch, M. W. and Ugurbil, K. and Van Essen, D.C.},
   title     = {Functional connectomics from resting-state fMRI},
   journal   = {Trends in cognitive sciences},
   year      = {2013},
@@ -167,7 +167,7 @@
 }
 
 @Article{eickhoff2005new,
-  author    = {Eickhoff, Simon B and Stephan, Klaas E and Mohlberg, Hartmut and Grefkes, Christian and Fink, Gereon R and Amunts, Katrin and Zilles, Karl},
+  author    = {Eickhoff, S. B. and Stephan, K. E and Mohlberg, H. and Grefkes, C. and Fink, G. R. and Amunts, K. and Zilles, K.},
   title     = {A new SPM toolbox for combining probabilistic cytoarchitectonic maps and functional imaging data},
   journal   = {Neuroimage},
   year      = {2005},
@@ -178,7 +178,7 @@
 }
 
 @Article{rubinov2010complex,
-  author    = {Rubinov, Mikail and Sporns, Olaf},
+  author    = {Rubinov, M. and Sporns, O.},
   title     = {Complex network measures of brain connectivity: uses and interpretations},
   journal   = {Neuroimage},
   year      = {2010},
@@ -189,7 +189,7 @@
 }
 
 @Article{smith2011network,
-  author    = {Smith, Stephen M and Miller, Karla L and Salimi-Khorshidi, Gholamreza and Webster, Matthew and Beckmann, Christian F and Nichols, Thomas E and Ramsey, Joseph D and Woolrich, Mark W},
+  author    = {Smith, S. M. and Miller, K. L. and Salimi-Khorshidi, G. and Webster, M. and Beckmann, C. F. and Nichols, T. E. and Ramsey, J. D. and Woolrich, M. W.},
   title     = {Network modelling methods for FMRI},
   journal   = {Neuroimage},
   year      = {2011},
@@ -200,7 +200,7 @@
 }
 
 @Article{thirion2014fmri,
-  author    = {Thirion, Bertrand and Varoquaux, Ga{\"e}l and Dohmatob, Elvis and Poline, Jean-Baptiste},
+  author    = {Thirion, B. and Varoquaux, G. and Dohmatob, E. and Poline, J.},
   title     = {Which fMRI clustering gives good brain parcellations?},
   journal   = {Frontiers in neuroscience},
   year      = {2014},
@@ -210,7 +210,7 @@
 }
 
 @Article{fan2015functional,
-  author    = {Fan, Yang and Nickerson, Lisa D and Li, Huanjie and Ma, Yajun and Lyu, Bingjiang and Miao, Xinyuan and Zhuo, Yan and Ge, Jianqiao and Zou, Qihong and Gao, Jia-Hong},
+  author    = {Fan, Y. and Nickerson, L. D. and Li, H. and Ma, Y. and Lyu, B. and Miao, X. and Zhuo, Y. and Ge, J. and Zou, Q. and Gao, J.},
   title     = {Functional connectivity-based parcellation of the thalamus: an unsupervised clustering method and its validity investigation},
   journal   = {Brain connectivity},
   year      = {2015},
@@ -221,7 +221,7 @@
 }
 
 @Article{craddock2012whole,
-  author    = {Craddock, R Cameron and James, G Andrew and Holtzheimer, Paul E and Hu, Xiaoping P and Mayberg, Helen S},
+  author    = {Craddock, R. C. and James, G. A. and Holtzheimer, P. E. and Hu, X. P. and Mayberg, H. S.},
   title     = {A whole brain fMRI atlas generated via spatially constrained spectral clustering},
   journal   = {Human brain mapping},
   year      = {2012},
@@ -232,7 +232,7 @@
 }
 
 @Article{glasser2013minimal,
-  author    = {Glasser, Matthew F and Sotiropoulos, Stamatios N and Wilson, J Anthony and Coalson, Timothy S and Fischl, Bruce and Andersson, Jesper L and Xu, Junqian and Jbabdi, Saad and Webster, Matthew and Polimeni, Jonathan R and others},
+  author    = {Glasser, M. F. and Sotiropoulos, S. N. and Wilson, J. A. and Coalson, T. S. and Fischl, B. and A., Jesper L. and Xu, J. and Jbabdi, S. and Webster, M. and Polimeni, J. R. and Van Essen, D.C. and Jenkinson M.},
   title     = {The minimal preprocessing pipelines for the Human Connectome Project},
   journal   = {Neuroimage},
   year      = {2013},
@@ -242,7 +242,7 @@
 }
 
 @InProceedings{blumensath2012resting,
-  author       = {Blumensath, Thomas and Behrens, Timothy EJ and Smith, Stephen M},
+  author       = {Blumensath, T. and Behrens, T. E.J. and Smith, S. M.},
   title        = {Resting-state FMRI single subject cortical parcellation based on region growing},
   booktitle    = {International Conference on Medical Image Computing and Computer-Assisted Intervention},
   year         = {2012},
@@ -251,7 +251,7 @@
 }
 
 @Article{wang2006changes,
-  author    = {Wang, Liang and Zang, Yufeng and He, Yong and Liang, Meng and Zhang, Xinqing and Tian, Lixia and Wu, Tao and Jiang, Tianzi and Li, Kuncheng},
+  author    = {Wang, L. and Zang, Y. and He, Y. and Liang, M. and Zhang, X. and Tian, L. and Wu, T. and Jiang, T. and Li, K.},
   title     = {Changes in hippocampal connectivity in the early stages of Alzheimer's disease: evidence from resting state fMRI},
   journal   = {Neuroimage},
   year      = {2006},
@@ -262,7 +262,7 @@
 }
 
 @Article{shi2000normalized,
-  author    = {Shi, Jianbo and Malik, Jitendra},
+  author    = {Shi, J. and Malik, J.},
   title     = {Normalized cuts and image segmentation},
   journal   = {IEEE Transactions on pattern analysis and machine intelligence},
   year      = {2000},
@@ -273,7 +273,7 @@
 }
 
 @Article{bernier2014using,
-  author    = {Bernier, Micha{\"e}l and Chamberland, Maxime and Houde, Jean-Christophe and Descoteaux, Maxime and Whittingstall, Kevin},
+  author    = {Bernier, M. and Chamberland, M. and Houde, J. and Descoteaux, M. and Whittingstall, K.},
   title     = {Using fMRI non-local means denoising to uncover activation in sub-cortical structures at 1.5 T for guided HARDI tractography},
   journal   = {Frontiers in human neuroscience},
   year      = {2014},
@@ -283,7 +283,7 @@
 }
 
 @Article{zuo2011effects,
-  author    = {Zuo, Xi-Nian and Xing, Xiu-Xia},
+  author    = {Zuo, X. and Xing, X.},
   title     = {Effects of non-local diffusion on structural MRI preprocessing and default network mapping: statistical comparisons with isotropic/anisotropic diffusion},
   journal   = {PLoS One},
   year      = {2011},
@@ -291,6 +291,39 @@
   number    = {10},
   pages     = {e26703},
   publisher = {Public Library of Science},
+}
+
+@article{fischl2012freesurfer,
+  title={FreeSurfer},
+  author={Fischl, B.},
+  journal={Neuroimage},
+  volume={62},
+  number={2},
+  pages={774--781},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{shattuck2002brainsuite,
+  title={BrainSuite: an automated cortical surface identification tool},
+  author={Shattuck, D. W. and Leahy, R. M.},
+  journal={Medical image analysis},
+  volume={6},
+  number={2},
+  pages={129--142},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{honey2009predicting,
+  title={Predicting human resting-state functional connectivity from structural connectivity},
+  author={Honey, C.J. and Sporns, O. and Cammoun, L. and Gigandet, X. and Thiran, J. and Meuli, R. and Hagmann, P.},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={6},
+  pages={2035--2040},
+  year={2009},
+  publisher={National Acad Sciences}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
