--- a/docs/atlas_paper/atlas_JNM_ajoshi.lyx
+++ b/docs/atlas_paper/atlas_JNM_ajoshi.lyx
@@ -1,9 +1,7 @@
 #LyX 2.2 created this file. For more info see http://www.lyx.org/
-\lyxformat 508
+\lyxformat 474
 \begin_document
 \begin_header
-\save_transient_properties true
-\origin unavailable
 \textclass elsarticle
 \begin_preamble
 \journal{Journal of Neuroscience, Methods}
@@ -17,16 +15,16 @@ theorems-std
 \language_package default
 \inputencoding auto
 \fontencoding global
-\font_roman "default" "default"
-\font_sans "default" "default"
-\font_typewriter "default" "default"
-\font_math "auto" "auto"
+\font_roman default
+\font_sans default
+\font_typewriter default
+\font_math auto
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
-\font_sf_scale 100 100
-\font_tt_scale 100 100
+\font_sf_scale 100
+\font_tt_scale 100
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -265,7 +263,7 @@ on.
 Anatomical Labeling 
 \begin_inset CommandInset label
 LatexCommand label
-name "subsec:Anatomical-Labeling"
+name "sub:Anatomical-Labeling"
 
 \end_inset
 
@@ -298,7 +296,7 @@ key "article-full"
 fMRI based subparcellation 
 \begin_inset CommandInset label
 LatexCommand label
-name "subsec:fMRI-based-subparcellation"
+name "sub:fMRI-based-subparcellation"
 
 \end_inset
 
@@ -597,7 +595,7 @@ As described in Sec.
  
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "subsec:Anatomical-Labeling"
+reference "sub:Anatomical-Labeling"
 
 \end_inset
 
@@ -615,7 +613,7 @@ on as described in Sec.
  
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "subsec:fMRI-based-subparcellation"
+reference "sub:fMRI-based-subparcellation"
 
 \end_inset
 
