--- a/docs/ipmi2017/ipmi2017_brainsync_aaj.lyx
+++ b/docs/ipmi2017/ipmi2017_brainsync_aaj.lyx
@@ -1,5 +1,5 @@
-#LyX 2.0 created this file. For more info see http://www.lyx.org/
-\lyxformat 413
+#LyX 2.1 created this file. For more info see http://www.lyx.org/
+\lyxformat 474
 \begin_document
 \begin_header
 \textclass llncs
@@ -10,18 +10,18 @@
 \maintain_unincluded_children false
 \language english
 \language_package default
-\inputencoding latin9
+\inputencoding iso8859-15
 \fontencoding T1
 \font_roman default
 \font_sans default
 \font_typewriter default
+\font_math auto
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
 \font_sf_scale 100
 \font_tt_scale 100
-
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -32,15 +32,24 @@
 \use_hyperref false
 \papersize default
 \use_geometry false
-\use_amsmath 2
-\use_esint 1
-\use_mhchem 0
-\use_mathdots 0
+\use_package amsmath 2
+\use_package amssymb 2
+\use_package cancel 1
+\use_package esint 1
+\use_package mathdots 0
+\use_package mathtools 1
+\use_package mhchem 0
+\use_package stackrel 1
+\use_package stmaryrd 1
+\use_package undertilde 1
 \cite_engine basic
+\cite_engine_type default
+\biblio_style plain
 \use_bibtopic false
 \use_indices false
 \paperorientation portrait
 \suppress_date false
+\justification true
 \use_refstyle 0
 \index Index
 \shortcut idx
@@ -545,13 +554,13 @@ status collapsed
 
 
 \begin_inset Graphics
-	filename ../../../../Desktop/IPMI2017_final/figs/fmri_spheres_MC.pdf
-	width 100text%
+	filename figs/fmri_spheres_MC.pdf
+	width 80text%
 
 \end_inset
 
  
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Illustration of the BrainSync concept: (a) the geodesic and Euclidean distances
@@ -702,7 +711,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../../../../Desktop/IPMI2017_final/figs/sync_before_after.eps
+	filename figs/sync_before_after.eps
 	width 100text%
 
 \end_inset
@@ -711,7 +720,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 BrainSync for two subjects.
@@ -830,7 +839,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../../../../Desktop/IPMI2017_final/figs/Sync_time_series_MC.pdf
+	filename figs/Sync_time_series_MC.pdf
 	width 100text%
 
 \end_inset
@@ -839,7 +848,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Representative time series for two subjects for a single cortical location
@@ -897,7 +906,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../../../../Desktop/IPMI2017_final/figs/sub2sub_pc.eps
+	filename figs/sub2sub_pc.eps
 	width 100text%
 
 \end_inset
@@ -906,7 +915,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Within subject correlation of average precuneus (PC) signal with entire
@@ -1098,7 +1107,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../../../../Desktop/IPMI2017_final/figs/hists_sync_MC.pdf
+	filename figs/hists_sync_MC.pdf
 	width 100text%
 
 \end_inset
@@ -1107,7 +1116,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Histograms of 
@@ -1198,7 +1207,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../../../../Desktop/IPMI2017_final/figs/fig_conn_sync_MC.pdf
+	filename figs/fig_conn_sync_MC.pdf
 	width 100text%
 
 \end_inset
@@ -1207,7 +1216,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Spatial maps of 
@@ -1290,7 +1299,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../../../../Desktop/IPMI2017_final/figs/sub_session_var.eps
+	filename figs/sub_session_var.eps
 	width 100text%
 
 \end_inset
@@ -1299,7 +1308,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Correlation of Resting fMRI and BrainSync: (a) across two sessions for the
@@ -1502,14 +1511,14 @@ status collapsed
 
 \begin_inset Tabular
 <lyxtabular version="3" rows="4" columns="7">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top" width="0">
-<column alignment="center" valignment="top" width="0">
-<column alignment="center" valignment="top" width="0">
-<column alignment="center" valignment="top" width="0">
-<column alignment="center" valignment="top" width="0">
-<column alignment="center" valignment="top" width="0">
-<column alignment="center" valignment="top" width="0">
+<features rotate="0" tabularvalignment="middle">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
 <row>
 <cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
 \begin_inset Text
@@ -2131,7 +2140,7 @@ status collapsed
 \end_inset
 
 
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Adjusted Rand Indices: mean(std) for different number of classes (
@@ -2168,7 +2177,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../../../../Desktop/IPMI2017_final/figs/indep_parcellation_100.eps
+	filename figs/indep_parcellation_100.eps
 	width 100text%
 
 \end_inset
@@ -2177,7 +2186,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Representative individual parcellation results (
@@ -2248,7 +2257,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename ../../../../Desktop/IPMI2017_final/figs/joint_both_sessions_parcellation_100.eps
+	filename figs/joint_both_sessions_parcellation_100.eps
 	width 100text%
 
 \end_inset
@@ -2257,7 +2266,7 @@ status open
 \end_layout
 
 \begin_layout Plain Layout
-\begin_inset Caption
+\begin_inset Caption Standard
 
 \begin_layout Plain Layout
 Joint Parcellation (
