miccai paper added

--- a/docs/papers/fmri_bib.bib
+++ b/docs/papers/fmri_bib.bib
@@ -20,6 +20,26 @@
   year={1976},
   publisher={International Union of Crystallography}
 }
+@article{lashkari2010discovering,
+  title={Discovering structure in the space of fMRI selectivity profiles},
+  author={Lashkari, Danial and Vul, Ed and Kanwisher, Nancy and Golland, Polina},
+  journal={Neuroimage},
+  volume={50},
+  number={3},
+  pages={1085--1098},
+  year={2010},
+  publisher={Elsevier}
+}
+@article{tozzi2016towards,
+  title={Towards a fourth spatial dimension of brain activity},
+  author={Tozzi, Arturo and Peters, James F},
+  journal={Cognitive neurodynamics},
+  volume={10},
+  number={3},
+  pages={189--199},
+  year={2016},
+  publisher={Springer}
+}
 @article{boutin2004reconstructing,
   title={On reconstructing n-point configurations from the distribution of distances or areas},
   author={Boutin, M. and Kemper, G.},
