--- a/docs/papers/fmri_bib.bib
+++ b/docs/papers/fmri_bib.bib
@@ -10,6 +10,16 @@
   pages     = {e0158504},
   publisher = {Public Library of Science},
 }
+@article{umeyama1991least,
+  title={Least-squares estimation of transformation parameters between two point patterns},
+  author={Umeyama, Shinji},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  volume={13},
+  number={4},
+  pages={376--380},
+  year={1991},
+  publisher={IEEE}
+}
 @article{kabsch1976solution,
   title={A solution for the best rotation to relate two sets of vectors},
   author={Kabsch, W.},
